[1.10][&1.9] Issue 5161 (Breakpoint condition editor layout broken on large monitors) http://code.google.com/p/fbug/issues/detail?id=5161
http://code.google.com/p/fbug/source/detail?r=12737

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -128,19 +128,18 @@
 }
 
 /************************************************************************************************/
+/* Breakpoint condition */
 
 .conditionEditor {
     z-index: 2147483647;
     position: absolute;
     margin-top: 0;
-    left: 2px;
+    left: 5px;
     width: 90%;
-}
-
-.conditionEditorInner {
-    position: relative;
-    top: -26px;
-    height: 0;
+    background: -moz-linear-gradient(top, #00CEFD, #00BAF6) no-repeat;
+    border-style: solid;
+    border-width: 19px 25px 33px 33px;
+    -moz-border-image: url(condCorners.png) 19 25 33 33 stretch;
 }
 
 .conditionCaption {
@@ -158,89 +157,13 @@
     font-size: inherit;
 }
 
-.conditionEditorInner1 {
-    padding-left: 37px;
-    background: url(condBorders.png) repeat-y;
-}
-
-.conditionEditorInner2 {
-    padding-right: 25px;
-    background: url(condBorders.png) repeat-y 100% 0;
-}
-
-.conditionEditorTop1 {
-    background: url(condCorners.png) no-repeat 100% 0;
-    margin-left: 37px;
-    height: 35px;
-}
-
-.conditionEditorTop2 {
-    position: relative;
-    left: -37px;
-    width: 37px;
-    height: 35px;
-    background: url(condCorners.png) no-repeat;
-}
-
-.conditionEditorBottom1 {
-    background: url(condCorners.png) no-repeat 100% 100%;
-    margin-left: 37px;
-    height: 33px;
-}
-
-.conditionEditorBottom2 {
-    position: relative;    left: -37px;
-    width: 37px;
-    height: 33px;
-    background: url(condCorners.png) no-repeat 0 100%;
-}
-
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .upsideDown {
-    margin-top: 2px;
-}
-
-.upsideDown .conditionEditorInner {
-    top: -8px;
-}
-
-.upsideDown .conditionEditorInner1 {
-    padding-left: 33px;
-    background: url(condBordersUps.png) repeat-y;
-}
-
-.upsideDown .conditionEditorInner2 {
-    padding-right: 25px;
-    background: url(condBordersUps.png) repeat-y 100% 0;
-}
-
-.upsideDown .conditionEditorTop1 {
-    background: url(condCornersUps.png) no-repeat 100% 0;
-    margin-left: 33px;
-    height: 25px;
-}
-
-.upsideDown .conditionEditorTop2 {
-    position: relative;
-    left: -33px;
-    width: 33px;
-    height: 25px;
-    background: url(condCornersUps.png) no-repeat;
-}
-
-.upsideDown .conditionEditorBottom1 {
-    background: url(condCornersUps.png) no-repeat 100% 100%;
-    margin-left: 33px;
-    height: 43px;
-}
-
-.upsideDown .conditionEditorBottom2 {
-    position: relative;
-    left: -33px;
-    width: 33px;
-    height: 43px;
-    background: url(condCornersUps.png) no-repeat 0 100%;
+    background: -moz-linear-gradient(top, #00D1FE, #00ADE6) no-repeat;
+    border-style: solid;
+    border-width: 28px 25px 19px 33px;
+    -moz-border-image: url(condCornersUps.png) 28 25 19 33 stretch;
 }
 
 /************************************************************************************************/
